<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:background="@drawable/bg_search"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ellipseIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@drawable/ic_ellipse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ellipsize="end"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/do_some_thing"
        android:textColor="#DEFFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/categoryBtn"
        app:layout_constraintStart_toEndOf="@id/ellipseIv"
        app:layout_constraintTop_toTopOf="@id/ellipseIv" />

    <TextView
        android:id="@+id/dateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/today_at_16_45"
        android:textColor="#DEFFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/ellipseIv"
        app:layout_constraintStart_toEndOf="@id/ellipseIv"
        app:layout_constraintTop_toBottomOf="@id/titleTv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/categoryBtn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#809CFF"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="end|center_vertical"
        android:padding="8dp"
        android:text="@string/university"
        android:textColor="#fff"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/flagBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/flagBtn"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:background="@drawable/bg_flag"
        android:drawableStart="@drawable/ic_flag"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="end|center_vertical"
        android:padding="8dp"
        android:text="@string/_1"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>